# vgscode.py

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
src/vgscode/: __init__.py  sanitizers.py
src/vgscode/kazakhstan/: bin.py  iin.py
